build: nginx only set Auth header if unset

--- a/nginx/templates/prod.template
+++ b/nginx/templates/prod.template
@@ -34,8 +34,12 @@ server {
         proxy_set_header X-Forwarded-Server  $http_host;
         proxy_set_header X-Forwarded-Port    $server_port;
 
-        # Add cookie content to Authorization request header
-        proxy_set_header 'Authorization' $cookie_${AUTH_COOKIE_NAME};
+        # Add cookie content to Authorization request header, if not exists
+        set $auth_token "";
+        if ($http_authorization = "") {
+            set $auth_token $cookie_${AUTH_COOKIE_NAME};
+        }
+        proxy_set_header 'Authorization' $auth_token;
 
         proxy_cache cache;
         proxy_cache_bypass $cookie_${AUTH_COOKIE_NAME};
