--- a/nginx/templates/stag.template
+++ b/nginx/templates/stag.template
@@ -36,8 +36,12 @@ server {
         proxy_set_header X-Forwarded-Server  $http_host;
         proxy_set_header X-Forwarded-Port    $server_port;
 
-        # Add cookie content to Authorization request header
-        proxy_set_header 'Authorization' $cookie_${AUTH_COOKIE_NAME};
+        # Add cookie content to Authorization request header, if not exists
+        set $auth_token "";
+        if ($http_authorization = "") {
+            set $auth_token $cookie_${AUTH_COOKIE_NAME};
+        }
+        proxy_set_header 'Authorization' $auth_token;
 
         # In emergency comment out line to force caching
         #proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
