--- a/requirements-extra.txt
+++ b/requirements-extra.txt
@@ -4,8 +4,11 @@ gunicorn==20.1.0
 # Plugins
 ## Latest scheming on pypi release Nov 2022
 ckanext-hierarchy==1.2.0
-ckanext-passwordless-api==1.1.1
+ckanext-passwordless-api==1.1.3
+ckanext-restricted-api==1.0.0
 ckanext-envidat-validators==0.1.4
+
+# Temp until cloudstorage plugin refactored
 boto3==1.20.26
 
 # # Opentelemetry
