--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       - ckan_translations:/usr/lib/ckan/.local/lib/python3.9/site-packages/ckan/public/base/i18n
       # - ./ckan:/usr/lib/ckan/.local/lib/python3.9/site-packages/ckan
       # - ./ckanext/passwordless_api:/usr/lib/ckan/.local/lib/python3.9/site-packages/ckanext/passwordless_api
+      - ./ckanext/restricted_api:/usr/lib/ckan/.local/lib/python3.9/site-packages/ckanext/restricted_api
     networks:
       - ckan-internal
       - traefik-proxy
@@ -93,6 +94,8 @@ services:
       - .db.env
     volumes:
       - pg_data:/var/lib/postgresql/data
+    extra_hosts:
+      pgdboapp.wsl.ch: 10.30.1.156
     networks:
       - ckan-internal
     healthcheck:
