--- a/nginx/templates/stag.template
+++ b/nginx/templates/stag.template
@@ -25,6 +25,8 @@ server {
     add_header 'Access-Control-Allow-Headers' 'traceparent,tracestate';
 
     location / {
+        proxy_read_timeout 40s;
+        proxy_connect_timeout 20s;
         proxy_pass http://${CKAN_HOST};
 
         # Requests headers
@@ -42,6 +44,9 @@ server {
             set $auth_token $cookie_${AUTH_COOKIE_NAME};
         }
         proxy_set_header 'Authorization' $auth_token;
+
+        # Strip out ckan cookie (not required)
+        proxy_set_header Cookie "ckan=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
 
         # In emergency comment out line to force caching
         #proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
