--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
   - scan
   - package
   - deploy
+  - release
 
 variables:
   ARTIFACT_COMPRESSION_LEVEL: "fast"
@@ -262,6 +263,7 @@ create-helm-chart:
     - helm package chart
     - CHART_VER=$(yq '.version' chart/Chart.yaml)
     - helm push "ckan-${CHART_VER}.tgz" oci://registry-gitlab.wsl.ch/envidat/ckan-container
+
 # helm-deploy:
 #   extends:
 #     - .helm
@@ -314,3 +316,37 @@ create-helm-chart:
 #       --version "${CHART_VERSION}"
 #       --set image.tag="${CKAN_VERSION}-${CI_COMMIT_REF_NAME}"
 #       --set proxy.image.tag="${NGINX_IMG_TAG}-${CI_COMMIT_REF_NAME}"
+
+static-binary:
+  stage: release
+  rules:
+    - if: $CI_COMMIT_TAG
+  before_script:
+    - curl -LO https://github.com/ajdiaz/bashc/releases/download/5.2.15/bashc
+    - chmod +x bashc
+  script:
+    - ./bashc scripts/envidat-in-a-box.sh envidat
+  artifacts:
+    paths:
+      - envidat
+    expire_in: 1 week
+
+release_job:
+  stage: release
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  needs:
+    - job: static-binary
+      artifacts: true
+  rules:
+    - if: $CI_COMMIT_TAG
+  script:
+    - echo "running release_job for $CI_COMMIT_TAG"
+  release:
+    name: "Release $CI_COMMIT_TAG"
+    tag_name: "$CI_COMMIT_TAG"
+    description: "$CI_COMMIT_TAG"
+    ref: "$CI_COMMIT_SHA"
+    assets:
+      links:
+        - name: envidat-in-a-box
+          url: $CI_SERVER_URL/$CI_PROJECT_PATH/-/jobs/$CI_JOB_ID/artifacts/envidat
