--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -248,9 +248,9 @@ remote-docker:
     - eval $(ssh-agent -s)
     - echo "$DEPLOY_SSH_KEY" | tr -d '\r' | ssh-add -
   script:
-    - >
-      docker compose
-        --file "docker-compose.$CI_COMMIT_REF_NAME.yml"
+    - |
+      docker compose \
+        --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
         up --detach
 
 build-binary:
