--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -238,8 +238,7 @@ remote-docker:
   environment: $CI_COMMIT_REF_NAME
   image: docker.io/docker:24.0
   variables:
-    DOCKER_HOST: "tcp://$DEPLOY_HOSTNAME:2376"
-    DOCKER_TLS_VERIFY: "1"
+    DOCKER_HOST: "ssh://$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME"
   before_script:
     - echo "$CKAN_INI" > config/ckan.ini
     - echo "$DB_ENV" > .db.env
