--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -251,12 +251,10 @@ remote-docker:
     - ssh-keyscan -H $DEPLOY_HOSTNAME >> ~/.ssh/known_hosts
   script:
     - |
-      ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" \
-        "mkdir -p /usr/local/share/ckan"
-      scp \
-        ckan.ini \
-        "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:/usr/local/share/ckan/$CI_COMMIT_REF_NAME.ini"
-      docker compose \
+      USER_DIR=$(echo "/home/$DEPLOY_SSH_USER")
+      ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/ckan"
+      scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/ckan/$CI_COMMIT_REF_NAME.ini"
+      HOME=$USER_DIR docker compose \
         --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
         up --detach
 
