--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -256,7 +256,7 @@ remote-docker:
       scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/ckan/$CI_COMMIT_REF_NAME.ini"
       HOME=$USER_DIR docker compose \
         --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
-        up --detach
+        up --detach --force-recreate
 
 build-binary:
   stage: release
