--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -237,6 +237,9 @@ remote-docker:
   stage: deploy
   environment: $CI_COMMIT_REF_NAME
   image: docker.io/docker:24.0
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
   variables:
     DOCKER_HOST: "ssh://$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME"
   before_script:
