--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -258,6 +258,7 @@ remote-docker:
       ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/ckan"
       scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/ckan/$CI_COMMIT_REF_NAME.ini"
       HOME=$USER_DIR docker compose \
+        --project-name="ckan-$CI_COMMIT_REF_NAME" \
         --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
         up --detach --force-recreate
 
