--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3"
+name: "ckan-local"
 
 volumes:
   ckan_storage:
@@ -61,7 +62,6 @@ services:
         - EXTERNAL_REG=${EXTERNAL_REG}
         - NGINX_IMG_TAG=${NGINX_IMG_TAG}
         - MAINTAINER=${MAINTAINER}
-        - NGINX_CONFIG_NAME=${NGINX_CONFIG_NAME}
     depends_on:
       - ckan
     environment:
