--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -237,9 +237,8 @@ remote-docker:
   stage: deploy
   environment: $CI_COMMIT_REF_NAME
   image: docker.io/docker:24.0
-  rules:
-    - if: $CI_COMMIT_TAG
-      when: never
+  only:
+    - branches
   variables:
     DOCKER_HOST: "ssh://$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME"
   before_script:
