--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,16 +23,16 @@ workflow:
 set-vars:
   stage: .pre
   image: docker.io/alpine:3.15
-  before_script:
-    - >
-      apk add yq --no-cache
-      --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community
+  # before_script:
+  #   - >
+  #     apk add yq --no-cache
+  #     --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community
   script:
     - cat .env >> build.env
     - source build.env
-    - echo "NAMESPACE=ckan" >> build.env
     - echo "APP_NAME=ckan-${CI_COMMIT_REF_NAME}" >> build.env
-    - echo CHART_VERSION=$(yq '.version' chart/Chart.yaml) >> build.env
+    # - echo "NAMESPACE=ckan" >> build.env
+    # - echo CHART_VERSION=$(yq '.version' chart/Chart.yaml) >> build.env
     - "echo CKAN_IMAGE=${INTERNAL_REG}/ckan-container/ckan:\
       ${CKAN_VERSION}-${CI_COMMIT_REF_NAME} >> build.env"
     - "echo PROXY_IMAGE=${INTERNAL_REG}/ckan-container/proxy:\
@@ -257,7 +257,7 @@ remote-docker:
       ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/ckan"
       scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/ckan/$CI_COMMIT_REF_NAME.ini"
       HOME=$USER_DIR docker compose \
-        --project-name="ckan-$CI_COMMIT_REF_NAME" \
+        --project-name="$APP_NAME" \
         --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
         up --detach --force-recreate
 
