--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -254,8 +254,8 @@ remote-docker:
   script:
     - |
       USER_DIR=$(echo "/home/$DEPLOY_SSH_USER")
-      ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/ckan"
-      scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/ckan/$CI_COMMIT_REF_NAME.ini"
+      ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/config/ckan"
+      scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/config/ckan/$CI_COMMIT_REF_NAME.ini"
       HOME=$USER_DIR docker compose \
         --project-name="$APP_NAME" \
         --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
