--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ volumes:
 networks:
   ckan-internal:
     name: ckan-local
+  micro-net:
+    external: true
 
 services:
   ckan:
     container_name: ckan
-    image: "${INTERNAL_REG}/ckan-container/ckan:${CKAN_VERSION}-debug"
+    image: "${INTERNAL_REG}/ckan-container/ckan:2.9-backup"
     build:
       context: .
       target: debug
@@ -26,108 +28,72 @@ services:
     extra_hosts:
       mail.wsl.ch: 10.30.1.224
     depends_on:
-      - db
       - solr
       - redis
     environment:
       CKAN_INI: "/opt/ckan/ckan.ini"
-      # OTEL_LOG_LEVEL: debug
-      # OTEL_RESOURCE_ATTRIBUTES: "service.name=ckan-local-dev"
-      # OTEL_TRACES_EXPORTER: "otlp_proto_http"
-      # OTEL_METRICS_EXPORTER: "otlp_proto_http"
-      # OTEL_LOGS_EXPORTER: "otlp_proto_http"
-      # OTEL_EXPORTER_OTLP_PROTOCOL: "http/protobuf"
-      # OTEL_EXPORTER_OTLP_ENDPOINT: "https://traces.envidat.ch"
-      # OTEL_PYTHON_LOG_CORRELATION: "True"
-      # OTEL_PYTHON_LOG_FORMAT:
-      # OTEL_PYTHON_LOG_LEVEL:
     volumes:
       - ckan_storage:/opt/ckan/data
-      - ./config/ckan.ini:/opt/ckan/ckan.ini
+      - ./config/ckan.ini:/opt/ckan/ckan.ini 
       - ckan_translations:/usr/lib/ckan/.local/lib/python3.10/site-packages/ckan/public/base/i18n
-      # - ./ckan:/usr/lib/ckan/.local/lib/python3.10/site-packages/ckan
-      # - ./ckanext/passwordless_api:/usr/lib/ckan/.local/lib/python3.10/site-packages/ckanext/passwordless_api
-      # - ./ckanext/restricted_api:/usr/lib/ckan/.local/lib/python3.10/site-packages/ckanext/restricted_api
-      # - ./ckanext/cloudstorage_api:/usr/lib/ckan/.local/lib/python3.10/site-packages/ckanext/cloudstorage_api
     networks:
       - ckan-internal
+    restart: unless-stopped
+   
+  doi_api:
+    container_name: doi_api_dev
+    image: "${INTERNAL_REG}/doi-publishing-api:${APP_VERSION}-dev"
+    env_file:
+      - .doi.env
+      #- .db.env
+      #- secret/runtime.env
+    environment:
+      IS_DOCKER: "True"
+    networks:
+      - micro-net
     restart: unless-stopped
 
   proxy:
     container_name: ckan_proxy
-    image: "${INTERNAL_REG}/ckan-container/proxy:${NGINX_IMG_TAG}-main"
+    #image: "${INTERNAL_REG}/ckan-container/proxy:${NGINX_IMG_TAG}-main"
     build:
       context: ./nginx
       args:
         - EXTERNAL_REG=${EXTERNAL_REG}
         - NGINX_IMG_TAG=${NGINX_IMG_TAG}
         - MAINTAINER=${MAINTAINER}
+      dockerfile: ./Dockerfile
     depends_on:
       - ckan
     environment:
+      - AUTH_COOKIE_NAME=envidat
       - CKAN_HOST=ckan:5000
-      - AUTH_COOKIE_NAME=envidat_local
+      - DOI_HOST=doi_api:8000
+      - CONVERTERS_HOST=converters_api:8000
+    env_file:
+      - .env
+      - .doi.env
     ports:
       - "8989:80"
     networks:
       - ckan-internal
-    restart: unless-stopped
-
-  db:
-    container_name: ckan_db
-    image: "${INTERNAL_REG}/ckan-container/db:${POSTGRES_IMG_TAG}-main"
-    build:
-      context: ./postgresql
-      args:
-        - EXTERNAL_REG=${EXTERNAL_REG}
-        - POSTGRES_IMG_TAG=${POSTGRES_IMG_TAG}
-        - MAINTAINER=${MAINTAINER}
-    environment:
-      - POSTGRES_PASSWORD=ai4ncF6GpHokPaNmW25UftzMjM7hrC
-      - PGDATA=/var/lib/postgresql/data/db
-    env_file:
-      - ${DB_ENV_FILE:-.db.env}
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    extra_hosts:
-      pgdboapp.wsl.ch: 10.30.1.156
-    networks:
-      - ckan-internal
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"]
-    ports:
-      - "25432:5432"
+      - micro-net
     restart: unless-stopped
 
   solr:
-    container_name: ckan_solr
-    image: "${INTERNAL_REG}/ckan-container/solr:${SOLR_IMG_TAG}-main"
-    build:
-      context: ./solr
-      args:
-        - EXTERNAL_REG=${EXTERNAL_REG}
-        - SOLR_IMG_TAG=${SOLR_IMG_TAG}
-        - MAINTAINER=${MAINTAINER}
-    volumes:
-      - solr_data:/var/solr/data
+    container_name: ckan_dev_solr
+    image: "${INTERNAL_REG}/ckan-container/solr:${SOLR_IMG_TAG}-dev"
     networks:
       - ckan-internal
-    ports:
-      - "8988:8983"
     restart: unless-stopped
 
   init-solr:
-    container_name: ckan_init_solr
-    image: "${INTERNAL_REG}/ckan-container/init-solr:${SOLR_IMG_TAG}-main"
-    build:
-      context: ./init_solr
-      args:
-        - EXTERNAL_REG=${EXTERNAL_REG}
-        - MAINTAINER=${MAINTAINER}
+    container_name: ckan_dev_init_solr
+    image: "${INTERNAL_REG}/ckan-container/init-solr:${SOLR_IMG_TAG}-dev"
+    env_file:
+      - .solr.env
     environment:
       SOLR_HOST: http://solr:8983
-      SOLR_ADMIN_PASS: 4hAYTQkUD6REA3futeKsvUjvK9wETG
-      SOLR_CKAN_PASS: MPnJRcGVGurpJF3kWq2eFNDEr3cXv6
     networks:
       - ckan-internal
     depends_on:
@@ -139,3 +105,4 @@ services:
     networks:
       - ckan-internal
     restart: unless-stopped
+
