--- a/nginx/templates/ckan.conf.template
+++ b/nginx/templates/ckan.conf.template
@@ -2,7 +2,16 @@ proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=cache:30m max_size=250m;
 proxy_temp_path /var/cache/nginx_tmp 1 2;
 
 upstream ckan {
-    server ${CKAN_HOST} max_fails=1 fail_timeout=2s;
+    server ${CKAN_HOST} max_fails=1 fail_timeout=5s;
+    keepalive 32;
+}
+
+upstream doiapi {
+    server ${DOI_HOST} max_fails=1 fail_timeout=5s;
+    keepalive 32;
+}
+upstream convertersapi {
+    server ${CONVERTERS_HOST} max_fails=1 fail_timeout=5s;
     keepalive 32;
 }
 
@@ -11,18 +20,26 @@ server {
     listen 80 default_server reuseport;
     server_name _;
 
-    client_max_body_size 10G;
+    client_max_body_size 15M;
 
     # below redirect breaks localhost access
     # rewrite ^/(.*)/$ /$1 permanent;
 
     # Response headers
-    add_header 'Content-Security-Policy' $upgrade_policy;
-    add_header 'Access-Control-Allow-Credentials' 'true';
-    # For opentelemetry
-    add_header 'Access-Control-Allow-Headers' 'traceparent,tracestate';
-
+    #add_header 'Access-Control-Allow-Origin' ${API_ROOT}:8990;
+    #add_header 'Content-Security-Policy' $upgrade_policy;
+    #add_header 'Access-Control-Allow-Credentials' 'true';
+    #add_header 'Access-Control-Allow-Methods' 'PUT,POST,GET,DELETE,PATCH,OPTIONS';
+    # For opentelemetry   
+    #add_header 'Access-Control-Allow-Headers' 'traceparent,tracestate';
+    
+    #include service_*.conf;
     location / {
+        #add_header 'Access-Control-Allow-Origin' ${API_ROOT}:8990;
+        add_header 'Content-Security-Policy' $upgrade_policy;
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        # For opentelemetry 
+        add_header 'Access-Control-Allow-Headers' 'traceparent,tracestate';
         proxy_read_timeout 40s;
         proxy_connect_timeout 20s;
 
@@ -43,9 +60,6 @@ server {
             set $auth_token $cookie_${AUTH_COOKIE_NAME};
         }
         proxy_set_header 'Authorization' $auth_token;
-
-        # Strip out ckan cookie (not required)
-        proxy_set_header Cookie "ckan=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
         
         proxy_cache cache;
         proxy_cache_bypass $cookie_${AUTH_COOKIE_NAME};
@@ -62,10 +76,20 @@ server {
 
         # In emergency comment out line to force caching
         #proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
-    }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    }
+    location /doi-api/ {
+        add_header 'Access-Control-Allow-Origin' ${API_ROOT}:8990;
+        proxy_pass http://doiapi/;
+
+        # Add cookie content to Authorization request header
+        proxy_set_header 'Authorization' $cookie_${AUTH_COOKIE_NAME};
+    }
+    location /converters-api/ {
+        add_header 'Access-Control-Allow-Origin' ${API_ROOT}:8990;
+        proxy_pass http://convertersapi/;
+
+        # Add cookie content to Authorization request header
+        #proxy_set_header 'Authorization' $cookie_${AUTH_COOKIE_NAME};
     }
 }
