--- a/nginx/templates/ckan.conf.template
+++ b/nginx/templates/ckan.conf.template
@@ -20,7 +20,7 @@ server {
     listen 80 default_server reuseport;
     server_name _;
 
-    client_max_body_size 15M;
+    client_max_body_size 10G;
 
     # below redirect breaks localhost access
     # rewrite ^/(.*)/$ /$1 permanent;
